<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ===================== -->
    <!--     MAIN SECTIONS     -->
    <!-- ===================== -->

    <Preference
        android:icon="@drawable/ic_settings"
        app:key="general"
        app:title="@string/general"
        android:summary="@string/general_summary" />

    <Preference
        android:icon="@drawable/ic_server"
        app:key="instance"
        app:title="@string/instance"
        app:summary="@string/instance_summary" />

    <Preference
        android:icon="@drawable/ic_color"
        app:key="appearance"
        app:title="@string/appearance"
        app:summary="@string/appearance_summary" />

    <Preference
        android:icon="@drawable/ic_block"
        app:key="sponsorblock"
        app:title="@string/sponsorblock"
        app:summary="@string/sponsorblock_summary" />

    <Preference
        android:icon="@drawable/ic_play_filled"
        app:key="player"
        app:title="@string/player"
        app:summary="@string/player_summary" />

    <Preference
        android:icon="@drawable/ic_movie"
        app:key="audio_video"
        app:title="@string/audio_video"
        app:summary="@string/audio_video_summary" />

    <Preference
        android:icon="@drawable/ic_history_filled"
        app:key="history"
        app:title="@string/history"
        android:summary="@string/history_summary" />

    <Preference
        android:icon="@drawable/ic_notification"
        app:key="notifications"
        app:title="@string/notifications"
        android:summary="@string/notify_new_streams" />

    <Preference
        android:icon="@drawable/ic_backup"
        app:key="backup_restore"
        app:title="@string/backup_restore"
        app:summary="@string/backup_restore_summary" />


    <!-- ===================== -->
    <!--      INFORMATION      -->
    <!-- ===================== -->

    <PreferenceCategory>

        <Preference
            android:icon="@drawable/ic_update"
            app:key="update"
            app:title="@string/update_summary"
            app:summary="@string/version" />

        <Preference
            android:icon="@drawable/ic_info"
            app:key="crashlog"
            app:title="@string/crashlog" />

    </PreferenceCategory>

</PreferenceScreen>