<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ===================== -->
    <!--   MODE OF OPERATION   -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/mode_of_operation">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_region"
            android:key="full_local_mode"
            android:title="@string/full_local_mode"
            android:summary="@string/full_local_mode_desc"
            android:defaultValue="false"
            android:disableDependentsState="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_region"
            android:key="local_stream_extraction"
            android:title="@string/local_stream_extraction"
            android:summary="@string/local_stream_extraction_summary"
            android:dependency="full_local_mode"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--        INSTANCE       -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/instance">

        <ListPreference
            android:icon="@drawable/ic_server"
            android:key="selectInstance"
            app:title="@string/instances"
            android:dependency="full_local_mode"
            app:defaultValue="https://pipedapi.kavin.rocks" />

        <Preference
            android:icon="@drawable/ic_add_instance"
            android:key="customInstance"
            app:title="@string/customInstance"
            app:summary="@string/customInstance_summary"
            android:dependency="full_local_mode" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_server"
            android:key="disable_video_image_proxy"
            android:title="@string/disable_proxy"
            android:summary="@string/disable_proxy_summary"
            android:dependency="full_local_mode"
            android:defaultValue="false" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--     AUTHENTICATION    -->
    <!-- ===================== -->

    <PreferenceCategory
        android:title="@string/authentication">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_region"
            android:key="local_feed_extraction"
            android:title="@string/local_feed_extraction"
            android:summary="@string/local_feed_extraction_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_auth"
            android:key="auth_instance_toggle"
            android:title="@string/auth_instance"
            app:summary="@string/auth_instance_summary"
            android:defaultValue="false" />

        <ListPreference
            android:icon="@drawable/ic_server"
            android:key="selectAuthInstance"
            app:title="@string/auth_instances"
            android:dependency="auth_instance_toggle"
            app:defaultValue="https://pipedapi.kavin.rocks" />

        <Preference
            android:icon="@drawable/ic_login_filled"
            android:key="login_register"
            app:title="@string/login_register"
            android:summary="@string/notgmail" />

        <Preference
            android:icon="@drawable/ic_login_filled"
            android:key="logout"
            app:title="@string/logout"
            android:summary="@string/notgmail"
            app:isPreferenceVisible="false" />

        <Preference
            android:icon="@drawable/ic_reset"
            android:key="delete_account"
            app:title="@string/deleteAccount"
            android:summary="@string/deleteAccount_summary" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--          MISC         -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/misc">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_dislike"
            android:key="local_return_youtube_dislikes"
            android:title="@string/local_ryd"
            android:summary="@string/local_ryd_summary"
            android:dependency="local_stream_extraction"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>