<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ===================== -->
    <!--        LOCATION       -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/location">

        <ListPreference
            android:icon="@drawable/ic_translate"
            app:key="language"
            app:title="@string/changeLanguage"
            app:defaultValue="sys"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--     CUSTOMIZATION     -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/customization">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_headphones"
            app:key="audio_only_mode"
            app:title="@string/audio_only_mode"
            android:summary="@string/audio_only_mode_summary"
            android:defaultValue="false" />

        <ListPreference
            android:icon="@drawable/ic_screen_rotation"
            app:key="orientation"
            app:title="@string/screen_orientation"
            android:entries="@array/orientation"
            android:entryValues="@array/orientation_values"
            android:defaultValue="@string/config_default_orientation_pref"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_suggestions"
            app:key="search_suggestions"
            app:title="@string/show_search_suggestions"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_list"
            app:key="related_streams_toggle"
            app:title="@string/related_streams"
            app:summary="@string/related_streams_summary"
            android:defaultValue="true" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--        DOWNLOADS      -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/downloads">

        <com.github.libretube.ui.views.SliderPreference
            android:icon="@drawable/ic_download"
            android:key="max_parallel_downloads"
            android:title="@string/concurrent_downloads"
            app:defValue="6"
            app:stepSize="1"
            app:valueFrom="1"
            app:valueTo="6" />

        <EditTextPreference
            android:icon="@drawable/ic_open"
            android:key="external_download_provider"
            android:title="@string/external_download_provider"
            android:summary="@string/external_download_provider_summary" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--        ADVANCED       -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/advanced">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_download_filled"
            app:key="automatic_update_checks"
            app:title="@string/show_updates"
            app:summary="@string/show_updates_summary"
            android:defaultValue="false" />

        <ListPreference
            android:icon="@drawable/ic_data_saver"
            app:key="data_saver_mode_key"
            app:title="@string/data_saver_mode"
            android:entries="@array/dataSaverModeOptions"
            android:entryValues="@array/dataSaverModeValues"
            android:summary="@string/data_saver_mode_summary"
            android:defaultValue="disabled" />

        <ListPreference
            android:icon="@drawable/ic_cache"
            app:key="image_cache_size"
            app:title="@string/maximum_image_cache"
            android:entries="@array/cacheSize"
            android:entryValues="@array/cacheSizeValues"
            app:defaultValue="128"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_badge"
            app:key="new_videos_badge"
            app:title="@string/new_videos_badge"
            android:summary="@string/new_videos_badge_summary" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--          MISC         -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/misc">

        <Preference
            android:icon="@drawable/ic_reset"
            app:key="reset_settings"
            app:title="@string/reset" />

    </PreferenceCategory>

</PreferenceScreen>