<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ===================== -->
    <!--       APPEARANCE      -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/appearance">

        <ListPreference
            android:icon="@drawable/ic_theme"
            app:key="theme_toggle"
            app:title="@string/app_theme"
            app:entries="@array/themes"
            app:entryValues="@array/themesValue"
            app:defaultValue="A"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_invert_colors"
            app:key="pure_theme"
            app:title="@string/pure_theme"
            android:summary="@string/pure_theme_summary"
            app:defaultValue="false" />

        <ListPreference
            android:icon="@drawable/ic_color"
            app:key="accent_color"
            app:title="@string/color_accent"
            app:entries="@array/accents"
            app:entryValues="@array/accentsValue"
            app:defaultValue="purple"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:icon="@drawable/ic_frame"
            app:key="icon_change"
            app:title="@string/app_icon" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--     NAVIGATION BAR    -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/navigation_bar">

        <Preference
            android:icon="@drawable/ic_home"
            app:key="navbar_items"
            app:title="@string/navbar_order" />

        <ListPreference
            android:icon="@drawable/ic_label"
            app:key="label_visibility"
            app:title="@string/navLabelVisibility"
            app:entries="@array/labelVisibility"
            app:entryValues="@array/labelVisibilityValues"
            app:defaultValue="selected"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--        LAYOUT         -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/layout">

        <MultiSelectListPreference
            android:icon="@drawable/ic_awesome"
            android:key="home_tab_content"
            android:title="@string/home_tab_content"
            android:entries="@array/homeTabItems"
            android:entryValues="@array/homeTabItemsValues"
            app:defaultValue="@array/homeTabItemsValues" />

        <ListPreference
            android:icon="@drawable/ic_grid"
            app:key="grid"
            app:title="@string/grid"
            app:entries="@array/grid"
            app:entryValues="@array/grid"
            app:defaultValue="@integer/grid_items"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_grid"
            app:key="grid_landscape"
            app:title="@string/grid_landscape"
            app:entries="@array/grid"
            app:entryValues="@array/grid"
            app:defaultValue="@integer/grid_items_landscape"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>