<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- ===================== -->
    <!--         WIFI          -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/wifi">

        <ListPreference
            android:icon="@drawable/ic_hd"
            app:key="default_res"
            app:title="@string/defres"
            app:entries="@array/defres"
            app:entryValues="@array/defresValue"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_fullscreen"
            app:key="default_res_no_fullscreen"
            app:title="@string/no_fullscreen_resolution"
            app:entries="@array/defresNoPortrait"
            app:entryValues="@array/defresValue"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_headphones"
            app:key="player_audio_quality"
            app:title="@string/playerAudioQuality"
            app:entries="@array/audioQuality"
            app:entryValues="@array/audioQualityValues"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <!-- ===================== -->
    <!--      MOBILE DATA      -->
    <!-- ===================== -->

    <PreferenceCategory
        app:title="@string/mobile_data">

        <ListPreference
            android:icon="@drawable/ic_hd"
            app:key="default_res_mobile"
            app:title="@string/defres"
            app:entries="@array/defres"
            app:entryValues="@array/defresValue"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_fullscreen"
            app:key="default_res_mobile_no_fullscreen"
            app:title="@string/no_fullscreen_resolution"
            app:entries="@array/defresNoPortrait"
            app:entryValues="@array/defresValue"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_headphones"
            app:key="player_audio_quality_mobile"
            app:title="@string/playerAudioQuality"
            app:entries="@array/audioQuality"
            app:entryValues="@array/audioQualityValues"
            app:defaultValue="auto"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>